c/mini/traefik/resource-ingressclass-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
