c/mini/traefik/resource-ingressroute-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.mini.defn.ooo`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
